--- a/config/app.ini
+++ b/config/app.ini
@@ -1,12 +1,12 @@
 [application]
-APP_NAME=Gin-mvc-Framework
-APPMODE = debug
-HTTPPORT = :8888
+app_name=Gin-mvc-Framework
+app_mode=debug
+http_port=8888
 
 [database]
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=gin_mvc
-DB_USERNAME=root
-DB_PASSWORD=123456
+db_connection=mysql
+db_host=127.0.0.1
+db_port=3306
+db_database=gin_mvc
+db_username=root
+db_password=123456
