feat: init project

--- a/config/app.ini
+++ b/config/app.ini
@@ -1,12 +1,13 @@
 [application]
 app_name=Gin-mvc-Framework
 app_mode=debug
+http_host=
 http_port=8888
 
 [database]
 db_connection=mysql
 db_host=127.0.0.1
 db_port=3306
-db_database=gin_mvc
+db_database=gin_cms
 db_username=root
 db_password=123456
