--- a/config/app.ini
+++ b/config/app.ini
@@ -11,3 +11,9 @@ db_port=3306
 db_database=gin_cms
 db_username=root
 db_password=123456
+
+[redis]
+redis_host=127.0.0.1
+redis_password=123456
+redis_port=6379
+
