--- a/config/app.ini
+++ b/config/app.ini
@@ -13,7 +13,16 @@ db_username=root
 db_password=123456
 
 [redis]
-redis_host=127.0.0.1
+redis_host=172.17.0.3
 redis_password=123456
 redis_port=6379
 
+[mail]
+mail_driver=smtp
+mail_host=smtp.exmail.qq.com
+mail_port=465
+mail_username=jsoner.chen@goldentec.com
+mail_password=Chenfeizhou002
+mail_encryption=ssl
+email_from_address=jsoner.chen@goldentec.com
+mail_from_name={$app_name}
