--- a/config/app.ini
+++ b/config/app.ini
@@ -21,8 +21,8 @@ redis_port=6379
 mail_driver=smtp
 mail_host=smtp.exmail.qq.com
 mail_port=465
-mail_username=jsoner.chen@goldentec.com
-mail_password=Chenfeizhou002
+mail_username=jsoner.chen@gmall.com
+mail_password=XXXXXX
 mail_encryption=ssl
-email_from_address=jsoner.chen@goldentec.com
+email_from_address=jsoner.chen@gmall.com
 mail_from_name={$app_name}
